--- a/css/widescreen.css
+++ b/css/widescreen.css
@@ -1,6 +1,3 @@
-body {
-  overflow-x: hidden;
-}
 .container {
   max-width: 800px;
 }
@@ -92,6 +89,10 @@ body {
   flex-basis: 600px;
 }
 #about .container .img-bg {
-  width: 650px;
-  right: -250px;
+  width: 525px;
+}
+#value .card .box {
+  padding: 2rem;
+  width: 250px;
+  height: 300px;
 }
