--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,7 @@ input[type="text"]:focus {
 
 #value .card .box {
   border: 1px solid var(--brand-green);
+  border-radius: 8px;
   width: 300px;
   height: 300px;
   padding: 4rem;
@@ -570,4 +571,31 @@ input[type="text"]:focus {
 #team .l-heading,
 #team p {
   text-align: center;
+}
+
+.team-container {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+  justify-content: space-between;
+}
+
+#team .profile {
+  line-height: 1.5;
+}
+#team .profile .img {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+#team .profile .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#team .profile p {
+  text-align: left;
+  color: #ccc;
 }
