--- a/css/style.css
+++ b/css/style.css
@@ -621,8 +621,31 @@ input[type="text"]:focus {
   font-size: 1.2rem;
 }
 
-.adm-form .header .avatar {
-  margin-top: 50px;
+.adm-form .header .imageUpload {
+  background-color: #b7fdd3;
+  background-image: url("../images/admissionPhoto.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  margin: 50px auto 0;
+  width: 150px;
+  height: 150px;
+  position: relative;
+}
+
+.adm-form .header .upload-btn {
+  background-color: var(--medium-green);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  right: -5%;
+  bottom: 5%;
+  cursor: pointer;
 }
 
 .adm-form fieldset {
